# go-it-web-hw6-SQLAlchemy

./: .gitignore  README.md  my_select.py  pyproject.toml  readme.md  seeds.py
datebase/: db.py  models.py
migrations/: env.py
migrations/versions/: 024a3465b4b4_init.py  0a2aeaeed0ec_init.py  3d863df7ceae_init.py  5fb1ecd5e7c3_init.py  b4c8353f4ed1_init.py  cee7a9b37ea4_init.py
