[tool.poetry]
name = "go-it-web-hw6-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "go_it_web_hw6_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
psycopg2 = "^2.9.5"
alembic = "^1.10.2"
faker = "^18.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
